tests/baselines/reference/interMixingModulesInterfaces0.errors.txt
interMixingModulesInterfaces0.ts(5,13): error TS2322: Type 'null' is not assignable to type 'B'.


==== interMixingModulesInterfaces0.ts (1 errors) ====
    namespace A {
    
        export namespace B {
            export function createB(): B {
                return null;
                ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'B'.
            }
        }
    
        export interface B {
            name: string;
            value: number;
        }
    }
    
    var x: A.B = A.B.createB();